--- a/src/Routes/About/About.css
+++ b/src/Routes/About/About.css
@@ -314,6 +314,13 @@ gap: 10px;
     gap: 10px;
     transform: translateX(60px);
 }
+
+.lemon > .span-con > .text > a {
+    text-decoration: none;
+    display: flex;
+    gap: 5px;
+    font-size: 14px;
+}
 @media screen and (max-width:896px) {
     .our-grarlic-lemon > .lemon-con {
         width: 100%;
