--- a/src/Routes/Home/Home.css
+++ b/src/Routes/Home/Home.css
@@ -49,7 +49,6 @@
         display: flex;
         gap: 20px;
         padding: 20px;
-
     }
 
     .text-img > p {
@@ -284,6 +283,17 @@ display: flex;
     align-items: flex-start;
 }
 
+.info {
+    width: 100%;
+    height: 400px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    flex-direction: column;
+    gap: 20px;
+    background-color: #F9F9FF;
+    overflow: hidden;
+}
 .info {
     width: 100%;
     height: 400px;
