--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,77 @@ body {
   src: url(/src/Assets/static/Montserrat-Light.ttf);
 }
 
+.form-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 10px 100px;
+}
 
+.form-container > form {
+  width: 400px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-direction: column;
+  padding: 20px;
+  gap: 10px;
+  background-color: rgba(228, 222, 222, 0.8);
+}
 
+.form-container > form > input {
+  width: 350px;
+  height: 40px;
+  padding: 10px;
+  border: 1px solid black;
+  outline: none;
+  background-color: transparent;
+  border-radius: 5px;
+}
 
+.form-container > form > span {
+  width: 100%;
+  display: flex;
+  position: relative;
+}
+
+.form-container > form > span > input {
+  width: 350px;
+  height: 40px;
+  padding: 10px;
+  border: 1px solid black;
+  outline: none;
+  background-color: transparent;
+  border-radius: 5px;
+}
+
+.form-container > form > span > .wrap {
+  display: flex;
+  right: 20px;
+  top: 12px;
+  cursor: pointer;
+  position: absolute;
+}
+
+.form-container > form > button {
+  width: 100px;
+  height: 40px;
+  padding: 10px;
+  border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #ffb606;
+  cursor: pointer;
+  color: #fff;
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.form-container > form > p {
+  font-size: 16px;
+  color: #fff;
+  cursor: pointer;
+}
