--- a/src/Routes/Home/Home.css
+++ b/src/Routes/Home/Home.css
@@ -17,26 +17,31 @@
 .home-container > .text-img {
     width: 100%;
     height: 600px;
-    gap: 40px;
+    /* gap: 40px; */
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: flex-end;
+    align-items: flex-start;
     flex-direction: column;
     background-image: url(https://res.cloudinary.com/the-infatuation/image/upload/f_auto/q_auto/v1712237529/images/Lahpet_West_End_Interiors_Credit__Kathrin_Werner_7_zq8kif.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    padding-bottom: 25px;
+    /* font-weight: bolder; */
 }
 
 .text-img > p {
-    font-size: 25px;
+    font-size: 20px;
     font-weight: 600;
     color: #fff;
+    padding-left: 100px;
 }
 .text-img > h2 {
-    font-size: 60px;
+    width: 550px;
+    font-size: 50px;
     color: #fff;
-    transform: skewX(-10deg);
+    /* transform: skewX(-10deg); */
+    padding-left: 100px;
 }
 @media screen and (max-width:896px) {
     .home-container {
@@ -47,8 +52,8 @@
         width: 100%;
         height: 300px;
         display: flex;
-        gap: 20px;
-        padding: 20px;
+        gap: 5px;
+        padding: 10px;
     }
 
     .text-img > p {
@@ -56,11 +61,13 @@
         font-weight: 600;
         text-align: center;
         color: white;
+        padding: 0%;
     }
     .text-img > h2 {
         font-size: 25px;
-        text-align: center;
         color: white;
+        padding: 0px;
+        width: 100%;
     }
 }
 
