--- a/src/Routes/Scrolltotop/Scrolltotop.css
+++ b/src/Routes/Scrolltotop/Scrolltotop.css
@@ -11,10 +11,10 @@
     justify-content: center;
     align-items: center;
     border-radius: 50%;
-    background-color: #ffb606;
-    color: #0D0D27;
-    top: 80%;
-    left: 95%;
+    background-color: #0D0D27;
+    color: #ffb606;
+    top: 85%;
+    left: 97%;
     cursor: pointer;
     font-size: 20px;
     position: fixed;
@@ -24,14 +24,14 @@
 .scroll-to-top:hover {
     background-color: #fff;
     border: 1px solid #0D0D27;
-    color: #ffb606;
+    color: #0D0D27;
     box-shadow: 2px 2px 2px lightgrey;
 }
 @media screen and (max-width:896px) {
     .scroll-to-top {
         width: 30px;
         height: 30px;
-        top: 80%;
-        left: 80%;
+        top: 85%;
+        left: 90%;
     }
 }
